--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "homepage": "https://karamjeetdotnet.github.io",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
